--- a/index.html
+++ b/index.html
@@ -18,15 +18,8 @@
 	<link rel="stylesheet" href="assets/css/owl.theme.css">
 	<link rel="stylesheet" href="assets/css/flexslider.css" type="text/css">
     <link rel="stylesheet" href="assets/css/main.css">
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-			<!--[if lt IE 9]>
-				<script src="assets/js/html5shiv.js"></script>
-				<script src="assets/js/respond.js"></script>
-			<![endif]-->
-
-			<!--[if IE 8]>
-		    	<script src="assets/js/selectivizr.js"></script>
-		    <![endif]-->
+	
+	
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top">
@@ -62,7 +55,7 @@
 		                <div class="intro container">
 		                    <div class="inner-intro">
 		                        <h1 class="section-title" style="color:white">
-									The best way to boolge your favorite spot
+									The best way to boogle your favorite spot
 								</h1>		
 		<center>
 			<br>
@@ -123,52 +116,78 @@
 		    </div> <!-- /.flexslider -->
 		</div> <!-- /#header -->
 <!-- Find a Tour -->
-	<section class="tour section-wrapper container">
-		<h2 class="section-title">
-			Find a Tour
-		</h2>
-		<p class="section-subtitle">
-			Where would you like to go?
-		</p>
-		<div class="row">
-			<div class="col-md-3 col-sm-6">
-				<form role="form" class="form-dropdown">
-					<div class="form-group">
-						<label for="sel1">Select list (select one):</label>
-						<select class="form-control border-radius" id="sel1">
-							<option>America</option>
-							<option>Bangladesh</option>
-							<option>Canada</option>
-							<option>India</option>
-						</select>
-					</div>
-				</form>
-			</div>
+	<section>
+	  <script src="https://maps.google.com/maps/api/js" type="text/javascript"></script>
 
-			<div class="col-md-3 col-sm-6">
-				<div class="input-group">
-					<input type="text" class="form-control border-radius border-right" placeholder="Arrival"/>
-					<span class="input-group-addon border-radius custom-addon">
-						<i class="ion-ios-calendar"></i>
-					</span>
-				</div>
-			</div>
+       
 
-			<div class="col-md-3 col-sm-6">
-				<div class="input-group">
-					<input type="text" class="form-control border-radius border-right" placeholder="Departure"/>
-					<span class="input-group-addon border-radius custom-addon">
-						<i class="ion-ios-calendar"></i>
-					</span>
-				</div>
-			</div>
+        <style type="text/css" >
+            #map_canvas {
+                    width:100%;
+                    height:300px;
+            }
+        </style>
 
-			<div class="col-md-3 col-sm-6">
-				<div class="btn btn-default border-radius custom-button">
-					Search
-				</div>
-			</div>
-		</div>
+        <script type="text/javascript">
+			function initMap() {
+				var uluru = {
+					lat: 36.25512, lng: -115.2383485
+				};
+				var map = new google.maps.Map(document.getElementById('map_canvas'), {
+					zoom: 4,
+					center: uluru
+
+				});
+				var locations = [];
+				var contentString = "";
+				locations.push({name:"Las Vegas",latlng: new google.maps.LatLng(36.255123,-115.2383485)});
+				locations.push({name:"California",latlng: new google.maps.LatLng(36.778261,-119.417924)});
+				for(var i = 0; i<locations.length; i++){
+					var marker = new google.maps.Marker({
+						position: locations[i].latlng,
+						map:map,
+						title: locations[i].name
+					});
+					contentString = '<div id="content">'+
+					'<div id="siteNotice">'+
+					'</div>'+
+					'<h1 id="firstHeading" class="firstHeading">'+ locations[i].name +'</h1>'+
+					'<div id="bodyContent">'+
+					'<p><b>'+ locations[i].name +'</b>'+
+					'<p>'+ locations.length +
+					' elements in the locations array</p>'+
+					'</div>'+
+					'</div>';
+
+					var infowindow = new google.maps.InfoWindow({
+						content: contentString
+					});
+				}
+				
+
+					/*var marker = new google.maps.Marker({
+						position: uluru,
+						map: map,
+						title: 'Uluru (Ayers Rock)'
+					});*/
+					marker.addListener('click', function() {
+						infowindow.open(map, marker);
+					});
+
+			}
+			/*google.maps.event.addListener(window,"bounds_changed",function(){
+				var bounds = map.getBounds();
+				var NE = bounds.getNorthEast();
+				var SW = bounds.getSouthWest();
+				var strHTML ="North East:" + NE.lat() + "," + NE.lng() + "<br>";
+				strHTML += "SouthWest: " + SW.lat() + "," + SW.lng();
+				document.getElementById("info").innerHTML = strHTML;	
+			});*/
+			google.maps.event.addDomListener(window, "load", initMap);
+			
+        </script>
+        <div id="map_canvas"> </div>
+		<div id="info"> </div>
 	</section> <!-- /.tour -->
 
 
