--- a/index.html
+++ b/index.html
@@ -18,7 +18,20 @@
 	<link rel="stylesheet" href="assets/css/owl.theme.css">
 	<link rel="stylesheet" href="assets/css/flexslider.css" type="text/css">
     <link rel="stylesheet" href="assets/css/main.css">
-	
+	<style>
+		#map_convas,#info { 
+			height: 100%; 
+			width: 100%; 
+			position:absolute; 
+			top: 0; 
+			left: 0; 
+			z-index: 0; /* Set z-index to 0 as it will be on a layer below the contact form */
+		}
+		#searchForm { 
+			position: relative; 
+			z-index: 1; /* The z-index should be higher than Google Maps */		
+		}
+	</style>
 	
 </head>
 <body>
@@ -48,73 +61,66 @@
 	</nav>
 
 <!-- Home -->
-		<div id="header">
-		    <div class="flexslider">
-		        <ul class="slides">
-		            <li class="slider-item" style="background-image: url('assets/images/item-1.png')">
-		                <div class="intro container">
-		                    <div class="inner-intro">
-		                        <h1 class="section-title" style="color:white">
-									The best way to boogle your favorite spot
-								</h1>		
-		<center>
-			<br>
-			<div class="col-sm-4 col-sm-offset-4">
-				<div class="col-md-12 col-sm-12">
+<div id="header">
+	<div class="intro container">
+		<div class="inner-intro">
+			<h1 class="section-title" style="color:white">
+				The best way to boogle your favorite spot
+			</h1>		
+			<center>
+				<br>
+				<div class="col-sm-4 col-sm-offset-4" id="searchForm">
+					<div class="col-md-12 col-sm-12">
 					<form role="form" class="form-dropdown">
 						<div class="form-group">
-							<label for="sel1">Category:</label>
-							<select class="form-control border-radius selectPicker" placeholder="Category" id="sel1">
-								<option>Food</option>
-								<option>Nigthlife</option>
-								<option>Resturants</option>
-								<option>Shoppings</option>
-								<option>Active Life</option>
-								<option>Arts & Entertainment</option>
-								<option>Automotive</option>
-								<option>Beauty & Spas</option>
-								<option>Education</option>
-								<option>Event Planning</option>
-								<option>Health & Medical</option>
-								<option>Home Services</option>
-								<option>Local Services</option>
-							</select>
+						<label for="sel1">Category:</label>
+						<select class="form-control border-radius selectPicker" placeholder="Category" id="sel1">
+							<option>Food</option>
+							<option>Nigthlife</option>
+							<option>Resturants</option>
+							<option>Shoppings</option>
+							<option>Active Life</option>
+							<option>Arts & Entertainment</option>
+							<option>Automotive</option>
+							<option>Beauty & Spas</option>
+							<option>Education</option>
+							<option>Event Planning</option>
+							<option>Health & Medical</option>
+							<option>Home Services</option>
+							<option>Local Services</option>
+						</select>
 						</div>
 					</form>
-				</div>
-				<br>
-				<div class="col-md-6 col-sm-6">
-					<div class="input-group">
-						<input type="text" class="form-control border-radius border-right" placeholder="Find"/>
-						<span class="input-group-addon border-radius custom-addon">
+					</div>
+					<br>
+					<div class="col-md-6 col-sm-6">
+						<div class="input-group">
+							<input type="text" class="form-control border-radius border-right" placeholder="Find"/>
+							<span class="input-group-addon border-radius custom-addon">
+								<i class=""></i>
+							</span>
+						</div>
+					</div>
+					<br>
+					<div class="col-md-6 col-sm-6">
+						<div class="input-group">
+							<input type="text" class="form-control border-radius border-right" placeholder="Location"/>
+							<span class="input-group-addon border-radius custom-addon">
 							<i class=""></i>
-						</span>
+							</span>
+						</div>
+					</div>
+					<br><br>
+					<div class="col-md-12 col-sm-12 searchButton">
+						<div class="btn btn-default border-radius custom-button">
+							Search
+						</div>
 					</div>
 				</div>
-				<br>
-				<div class="col-md-6 col-sm-6">
-					<div class="input-group">
-						<input type="text" class="form-control border-radius border-right" placeholder="Location"/>
-						<span class="input-group-addon border-radius custom-addon">
-							<i class=""></i>
-						</span>
-					</div>
-				</div>
-				<br><br>
-				<div class="col-md-12 col-sm-12 searchButton">
-					<div class="btn btn-default border-radius custom-button">
-						Search
-					</div>
-				</div>
-			</div>
-		</center>
-		                    </div>
-		                </div>
-		            </li> <!-- /.slider-item -->
-		            
-		        </ul> <!-- /.slides -->
-		    </div> <!-- /.flexslider -->
-		</div> <!-- /#header -->
+			</center>
+		</div>
+	</div>
+</div> <!-- /#header -->
 <!-- Find a Tour -->
 	<section>
 	  <script src="https://maps.google.com/maps/api/js" type="text/javascript"></script>
@@ -171,15 +177,7 @@
 					});
 				}
 
-			}
-			/*google.maps.event.addListener(window,"bounds_changed",function(){
-				var bounds = map.getBounds();
-				var NE = bounds.getNorthEast();
-				var SW = bounds.getSouthWest();
-				var strHTML ="North East:" + NE.lat() + "," + NE.lng() + "<br>";
-				strHTML += "SouthWest: " + SW.lat() + "," + SW.lng();
-				document.getElementById("info").innerHTML = strHTML;	
-			});*/
+			}			
 			google.maps.event.addDomListener(window, "load", initMap);
 			
         </script>
