--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<meta http-equiv="X-UA-Compatible" content="IE=edge">
 			<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
-	<title>Euro Travel</title>
+	<title>Boogle</title>
 
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/ionicons.min.css">
@@ -34,7 +34,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html" title="HOME"><img class="img" src="assets/images/boogleBrand.png"></a>
+				<a class="navbar-brand" href="index.html" title="HOME"><img class="img" src="assets/images/boogleBrandW.png"></a>
 			</div> <!-- /.navbar-header -->
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -69,14 +69,14 @@
 				z-index: 1; /* The z-index should be higher than Google Maps */	
 				margin-top: 10%;
 				
-				background-color: rgba(255,255,255,.7);
+				background-color: rgba(0,0,0,.7);
 				padding-bottom: 1%;
 				border-style: solid;
 				border-width: 1px;
 				border-color: black;				
 			}
 			.intro{
-				margin-bottom: 7%;
+				margin-bottom: 10%;
 			}
         </style>
 
@@ -115,37 +115,37 @@
             {
               featureType: 'road',
               elementType: 'geometry',
-              stylers: [{color: '#de0b28'}]
+              stylers: [{color: '#33CC99'}]
             },
             {
               featureType: 'road',
               elementType: 'geometry.stroke',
-              stylers: [{color: '#de0b28'}]
+              stylers: [{color: '#33CC99'}]
             },
             {
               featureType: 'road',
               elementType: 'labels.text.fill',
-              stylers: [{color: '#de0b28'}]
+              stylers: [{color: '#33CC99'}]
             },
             {
               featureType: 'road.highway',
               elementType: 'geometry',
-              stylers: [{color: '#de0b28'}]
+              stylers: [{color: '#33CC99'}]
             },
             {
               featureType: 'road.highway',
               elementType: 'geometry.stroke',
-              stylers: [{color: '#de0b28'}]
+              stylers: [{color: '#33CC99'}]
             },
             {
               featureType: 'road.highway',
               elementType: 'labels.text.fill',
-              stylers: [{color: '#de0b28'}]
+              stylers: [{color: '#33CC99'}]
             },
             {
               featureType: 'transit',
               elementType: 'geometry',
-              stylers: [{color: '#de0b28'}]
+              stylers: [{color: '#33CC99'}]
             },
             {
               featureType: 'transit.station',
