--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if IE 7 ]><html class="ie ie7 lte9 lte8 lte7" lang="en-US"><![endif]-->
-<!--[if IE 8]><html class="ie ie8 lte9 lte8" lang="en-US">	<![endif]-->
-<!--[if IE 9]><html class="ie ie9 lte9" lang="en-US"><![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!-->
 <html class="noIE" lang="en-US">
 <!--<![endif]-->
 	<head>
@@ -19,15 +15,6 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/section.css">
     <link rel="stylesheet" href="assets/css/contact.css">
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-			<!--[if lt IE 9]>
-				<script src="assets/js/html5shiv.js"></script>
-				<script src="assets/js/respond.js"></script>
-			<![endif]-->
-
-			<!--[if IE 8]>
-		    	<script src="assets/js/selectivizr.js"></script>
-		    <![endif]-->
 	<script
 		src="http://maps.googleapis.com/maps/api/js">
 	</script>
@@ -211,11 +198,11 @@
 			<div class="row">
 				<div class="col-xs-4">
 					<div class="text-left">
-						&copy; Copyright Euro Travels
+						&copy; Copyright Boogle
 					</div>
 				</div>
 				<div class="col-xs-4">
-					Theme by <a href="http://www.themewagon.com">THEMEWAGON</a>
+					BOOGLE
 				</div>
 				<div class="col-xs-4">
 					<!-- <div class="top">
