categories needs to be done

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
 							<i class="ion-social-euro"></i>
 						</div>
 						<h3>
-							Affordable Pricing
+							Lorem Ipsum is simply dummy text of the industry.
 						</h3>
 						<p>
-							Class aptent taciti sociosutn tora torquent conub nost reptos himenaeos.
+							Lorem Ipsum is simply dummy text of the industry.
 						</p>
 					</div>
 				</div> <!-- /.col-md-3 -->
@@ -137,10 +137,10 @@
 							<i class="ion-ios-home"></i>
 						</div>
 						<h3>
-							High class Hotels
+							Lorem Ipsum is simply dummy text of the industry.
 						</h3>
 						<p>
-							Class aptent taciti sociosutn tora torquent conub nost reptos himenaeos.
+							Lorem Ipsum is simply dummy text of the industry.
 						</p>
 					</div>
 				</div> <!-- /.col-md-3 -->
@@ -163,10 +163,10 @@
 							<i class="ion-ios-locked"></i>
 						</div>
 						<h3>
-							Highest Security
+							Lorem Ipsum is simply dummy text of the industry.
 						</h3>
 						<p>
-							Class aptent taciti sociosutn tora torquent conub nost reptos himenaeos.
+							Lorem Ipsum is simply dummy text of the industry.
 						</p>
 					</div>
 				</div> <!-- /.col-md-3 -->
