--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		<link rel="stylesheet" href="assets/css/owl.carousel.css">
 		<link rel="stylesheet" href="assets/css/owl.theme.css">
 		<link rel="stylesheet" href="assets/css/flexslider.css" type="text/css">
-		<link rel="stylesheet" href="assets/css/main.css">	
+		<link rel="stylesheet" href="assets/css/main.css">
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">	
 	</head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top">
@@ -61,24 +62,18 @@
 						<div class="form-group">
 						<label for="sel1" style="color:#FFD700;">Category:</label>
 						<select class="form-control border-radius selectPicker" placeholder="Category" id="sel1">
-							<option>Food</option>
-							<option>Nigthlife</option>
-							<option>Resturants</option>
-							<option>Shoppings</option>
-							<option>Active Life</option>
-							<option>Arts & Entertainment</option>
-							<option>Automotive</option>
-							<option>Beauty & Spas</option>
-							<option>Education</option>
-							<option>Event Planning</option>
-							<option>Health & Medical</option>
-							<option>Home Services</option>
-							<option>Local Services</option>
+							<option><i class="fa fa-star-o" aria-hidden="true"></i></option>
+							<option><i class="fa fa-star" aria-hidden="true"></i>1+</option>
+							<option><i class="fa fa-star" aria-hidden="true"></i>2+</option>
+							<option><i class="fa fa-star" aria-hidden="true"></i>3+</option>
+							<option><i class="fa fa-star" aria-hidden="true"></i>4+</option>
+							<option><i class="fa fa-star" aria-hidden="true"></i>5</option>
 						</select>
 						</div>
 					</form>
 					</div>
 					<br>
+					
 					<div class="col-md-6 col-sm-6">
 						<div class="input-group">
 							<input type="text" class="form-control border-radius border-right" placeholder="Find Ex. Restuarants"/>
@@ -107,70 +102,9 @@
 		</div>
 	</div>
 </div> <!-- /#header -->
-<!-- Find a Tour -->
-	<!-- Our Blazzing offers -->
 	<section class="offer section-wrapper">
 		<div class="container">
-			<h2 class="section-title" style="color:#FFD700;">
-				Boogle of: New York
-			</h2>
-			<p class="section-subtitle">
-				Lorem Ipsum is simply dummy text of the industry.
-			</p>
-			<div class="row">
-				<div class="col-sm-3 col-xs-6">
-					<div class="offer-item">
-						<div class="icon">
-							<i class="ion-social-euro"></i>
-						</div>
-						<h3>
-							Lorem Ipsum is simply dummy text of the industry.
-						</h3>
-						<p>
-							Lorem Ipsum is simply dummy text of the industry.
-						</p>
-					</div>
-				</div> <!-- /.col-md-3 -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="offer-item">
-						<div class="icon">
-							<i class="ion-ios-home"></i>
-						</div>
-						<h3>
-							Lorem Ipsum is simply dummy text of the industry.
-						</h3>
-						<p>
-							Lorem Ipsum is simply dummy text of the industry.
-						</p>
-					</div>
-				</div> <!-- /.col-md-3 -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="offer-item">
-						<div class="icon">
-							<i class="ion-android-bus"></i>
-						</div>
-						<h3>
-							Luxury Transport
-						</h3>
-						<p>
-							Class aptent taciti sociosutn tora torquent conub nost reptos himenaeos.
-						</p>
-					</div>
-				</div> <!-- /.col-md-3 -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="offer-item">
-						<div class="icon">
-							<i class="ion-ios-locked"></i>
-						</div>
-						<h3>
-							Lorem Ipsum is simply dummy text of the industry.
-						</h3>
-						<p>
-							Lorem Ipsum is simply dummy text of the industry.
-						</p>
-					</div>
-				</div> <!-- /.col-md-3 -->
-			</div> <!-- /.row -->
+			
 		</div> <!-- /.container -->
 	</section> <!-- /.offer -->
 	<!-- Top place to visit -->	
