--- a/index.html
+++ b/index.html
@@ -60,15 +60,14 @@
 					<div class="col-md-12 col-sm-12">
 					<form role="form" class="form-dropdown">
 						<div class="form-group">
-						<label for="sel1" style="color:#FFD700;">Category:</label>
-						<select class="form-control border-radius selectPicker" placeholder="Category" id="sel1">
-							<option><i class="fa fa-star-o" aria-hidden="true"></i></option>
-							<option><i class="fa fa-star" aria-hidden="true"></i>1+</option>
-							<option><i class="fa fa-star" aria-hidden="true"></i>2+</option>
-							<option><i class="fa fa-star" aria-hidden="true"></i>3+</option>
-							<option><i class="fa fa-star" aria-hidden="true"></i>4+</option>
-							<option><i class="fa fa-star" aria-hidden="true"></i>5</option>
-						</select>
+							<select class="form-control border-radius border-right" style="font-family: 'FontAwesome', Helvetica; color:#FFD700;">
+								<option value="" disabled selected>Rating</option>
+								<option>&#xf005&#xf005&#xf005&#xf005&#xf005</option>
+								<option>&#xf005&#xf005&#xf005&#xf005</option>
+								<option>&#xf005&#xf005&#xf005</option>
+								<option>&#xf005&#xf005</option>
+								<option>&#xf005</option>
+							</select>
 						</div>
 					</form>
 					</div>
@@ -104,7 +103,24 @@
 </div> <!-- /#header -->
 	<section class="offer section-wrapper">
 		<div class="container">
-			
+			 <table class="table table-striped table-hover">
+				<thead>
+				<tr>
+					<th></th>
+				</tr>
+				</thead>
+				<tbody>
+				<tr>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+				</tr>
+				</tbody>
+			</table>
 		</div> <!-- /.container -->
 	</section> <!-- /.offer -->
 	<!-- Top place to visit -->	
