value field in tag added in rating

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 					<form role="form" class="form-dropdown">
 						<div class="form-group">
 							<select class="form-control border-radius border-right" style="font-family: 'FontAwesome', Helvetica; color:#FFD700;">
-								<option value="" disabled selected>Rating</option>
-								<option>&#xf005&#xf005&#xf005&#xf005&#xf005</option>
-								<option>&#xf005&#xf005&#xf005&#xf005</option>
-								<option>&#xf005&#xf005&#xf005</option>
-								<option>&#xf005&#xf005</option>
-								<option>&#xf005</option>
+								<option value="" selected>Rating</option>
+								<option value="5">&#xf005&#xf005&#xf005&#xf005&#xf005 </option>
+								<option value="4">&#xf005&#xf005&#xf005&#xf005 +</option>
+								<option value="3">&#xf005&#xf005&#xf005 +</option>
+								<option value="2">&#xf005&#xf005 +</option>
+								<option value="1">&#xf005 +</option>
 							</select>
 						</div>
 					</form>
