--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
 				<strong>
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="about.html">about</a></li>
-						<li><a href="services.html">services</a></li>
 						<li><a href="contact.html">contact</a></li>
 						<li><a href="contact.html">Log In</a></li>
 						<li><a href="contact.html">Sign Up</a></li>
@@ -101,24 +99,81 @@
 		</div>
 	</div>
 </div> <!-- /#header -->
-	<section class="offer section-wrapper">
+	<section class="section-wrapper" style="margin-top: 1%;">
 		<div class="container">
 			 <table class="table table-striped table-hover">
-				<thead>
+				<thead style="color:#33CC99">
 				<tr>
-					<th></th>
+					<th><h1>FOOD</h1></th>
 				</tr>
 				</thead>
 				<tbody>
-				<tr>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-				</tr>
+					<tr>
+						<td>
+							<h3 class="" style="color: #222">Clementine’s Naughty & Nice Creamery</h3>
+							<small><a>239 Reviews</a></small>
+							<div class="starsRaiting " style="font-family: 'FontAwesome', Helvetica; color:#FFD700;">								
+								<i class="fa fa-star" aria-hidden="true"></i>
+								<i class="fa fa-star" aria-hidden="true"></i>
+								<i class="fa fa-star" aria-hidden="true"></i>
+								<i class="fa fa-star" aria-hidden="true"></i>
+								<i class="fa fa-star" aria-hidden="true"></i>
+							</div>
+							<div class="pull-left" style="font-size: 18px; color:#33CC99">								 
+								 <p style="font-size: 18px; color:#33CC99">
+									 <i class="fa fa-map-marker" aria-hidden="true"></i> 5708 Oakland Ave Saint Louis, MO 63110
+								</p>
+							</div>
+							<div class="pull-right" style="font-size: 18px; color:#33CC99">
+								<i class="fa fa-street-view" aria-hidden="true"></i>
+								<i class="fa fa-file-image-o" aria-hidden="true"></i>
+								<i class="fa fa-twitter" aria-hidden="true"></i>
+							</div>
+							
+						</td>				
+					</tr>
+					<tr>
+						<td>
+							<h3 class="" style="color: #222">The Cakery</h3>
+							<small><a>150 Reviews</a></small>
+							<div class="starsRaiting " style="font-family: 'FontAwesome', Helvetica; color:#FFD700;">
+								<i class="fa fa-star" aria-hidden="true"></i>
+								<i class="fa fa-star" aria-hidden="true"></i>
+								<i class="fa fa-star" aria-hidden="true"></i>
+							</div>
+							<div class="pull-left" style="font-size: 18px; color:#33CC99">								 
+								 <p style="font-size: 18px; color:#33CC99">
+									 <i class="fa fa-map-marker" aria-hidden="true"></i> 1637 S 18th St Saint Louis, MO 63104
+								</p>
+							</div>
+							<div class="pull-right" style="font-size: 18px; color:#33CC99">
+								<i class="fa fa-street-view" aria-hidden="true"></i>
+								<i class="fa fa-file-image-o" aria-hidden="true"></i>
+								<i class="fa fa-twitter" aria-hidden="true"></i>
+							</div>
+						</td>				
+					</tr>
+					<tr>
+						<td>
+							<h3 class="" style="color: #222">Pint Size Bakery & Coffee</h3>
+							<small><a>111 Reviews</a></small>							
+							<div class="starsRaiting " style="font-family: 'FontAwesome', Helvetica; color:#FFD700;">
+								<i class="fa fa-star" aria-hidden="true"></i>
+								<i class="fa fa-star" aria-hidden="true"></i>
+								<i class="fa fa-star" aria-hidden="true"></i>
+							</div>
+							<div class="pull-left" style="font-size: 18px; color:#33CC99">								 
+								 <p style="font-size: 18px; color:#33CC99">
+									 <i class="fa fa-map-marker" aria-hidden="true"></i> 1420 Tamm Ave Saint Louis, MO 63139
+								</p>
+							</div>
+							<div class="pull-right" style="font-size: 18px; color:#33CC99">
+								<i class="fa fa-street-view" aria-hidden="true"></i>
+								<i class="fa fa-file-image-o" aria-hidden="true"></i>
+								<i class="fa fa-twitter" aria-hidden="true"></i>
+							</div>
+						</td>				
+					</tr>				
 				</tbody>
 			</table>
 		</div> <!-- /.container -->
@@ -127,97 +182,8 @@
 	<section class="additional-services section-wrapper">
 		<div class="container">
 			<h2 class="section-title">
-				TOP REWVIEWED RESTAURANTS IN LA
+				TOP REVIEWED RESTAURANTS IN LOS ANGELES
 			</h2>
-			<p class="section-subtitle">
-				Lorem Ipsum is simply dummy text of the industry.
-			</p>
-			<div class="row">
-				<div class="col-md-4 col-sm-6">
-					<div class="custom-table">
-						<img src="assets/images/add-srvc-1.png" alt="" class="add-srvc-img">
-						<div class="add-srvc-detail">
-							<h4 class="add-srvc-heading">
-								Lorem Ipsum is simply dummy text of the industry.
-							</h4>
-							<p class="add-srvc">
-								Lorem Ipsum is simply dummy text of the industry.
-							</p>
-						</div> <!-- /.add-srvc-detail -->
-					</div> <!-- /.custom-table -->
-				</div> <!-- /.col-md-4 col-sm-6 -->
-
-				<div class="col-md-4 col-sm-6">
-					<div class="custom-table">
-						<img src="assets/images/add-srvc-2.png" alt="" class="add-srvc-img">
-						<div class="add-srvc-detail">
-							<h4 class="add-srvc-heading">
-								Lorem Ipsum is simply dummy text of the industry.
-							</h4>
-							<p class="add-srvc">
-								Lorem Ipsum is simply dummy text of the industry.
-							</p>
-						</div> <!-- /.add-srvc-detail -->
-					</div> <!-- /.custom-table -->
-				</div> <!-- /.col-md-4 col-sm-6 -->
-				
-				<div class="col-md-4 col-sm-6">
-					<div class="custom-table">
-						<img src="assets/images/add-srvc-3.png" alt="" class="add-srvc-img">
-						<div class="add-srvc-detail">
-							<h4 class="add-srvc-heading">
-								Lorem Ipsum is simply dummy text of the industry.
-							</h4>
-							<p class="add-srvc">
-								Lorem Ipsum is simply dummy text of the industry.
-							</p>
-						</div> <!-- /.add-srvc-detail -->
-					</div> <!-- /.custom-table -->
-				</div> <!-- /.col-md-4 col-sm-6 -->
-
-				<div class="col-md-4 col-sm-6">
-					<div class="custom-table">
-						<img src="assets/images/add-srvc-4.png" alt="" class="add-srvc-img">
-						<div class="add-srvc-detail">
-							<h4 class="add-srvc-heading">
-								Lorem Ipsum is simply dummy text of the industry.
-							</h4>
-							<p class="add-srvc">
-								Lorem Ipsum is simply dummy text of the industry.
-							</p>
-						</div> <!-- /.add-srvc-detail -->
-					</div> <!-- /.custom-table -->
-				</div> <!-- /.col-md-4 col-sm-6 -->
-
-				<div class="col-md-4 col-sm-6">
-					<div class="custom-table">
-						<img src="assets/images/add-srvc-5.png" alt="" class="add-srvc-img">
-						<div class="add-srvc-detail">
-							<h4 class="add-srvc-heading">
-								Lorem Ipsum is simply dummy text of the industry.
-							</h4>
-							<p class="add-srvc">
-								Lorem Ipsum is simply dummy text of the industry.
-							</p>
-						</div> <!-- /.add-srvc-detail -->
-					</div> <!-- /.custom-table -->
-				</div> <!-- /.col-md-4 col-sm-6 -->
-
-				<div class="col-md-4 col-sm-6">
-					<div class="custom-table">
-						<img src="assets/images/add-srvc-6.png" alt="" class="add-srvc-img">
-						<div class="add-srvc-detail">
-							<h4 class="add-srvc-heading">
-								Lorem Ipsum is simply dummy text of the industry.
-							</h4>
-							<p class="add-srvc">
-								Lorem Ipsum is simply dummy text of the industry.
-							</p>
-						</div> <!-- /.add-srvc-detail -->
-					</div> <!-- /.custom-table -->
-				</div> <!-- /.col-md-4 col-sm-6 -->
-			</div> <!-- /.row -->
-		</div> <!-- /.container -->
 	</section> <!-- /.Additional-services -->
 	<div class="section-wrapper sponsor">
 		<div class="container">
