--- a/index.html
+++ b/index.html
@@ -11,7 +11,35 @@
 		<link rel="stylesheet" href="assets/css/owl.theme.css">
 		<link rel="stylesheet" href="assets/css/flexslider.css" type="text/css">
 		<link rel="stylesheet" href="assets/css/main.css">
-		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">	
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script type="text/javascript">
+			$(document).ready(function(){
+				// jQuery function to perform search query
+				$("#search").click(function(){
+					// Get query parameters
+					var city = $("#city").val();
+					var rating = $("#rating").val();
+					var keyword = $("#keyword").val();
+					// Build URL to pass to query.php
+					var query = "query.php?city=" + city + "&keyword=" + keyword + "&rating=" + rating;
+					// Perform AJAX call to query.php and populate results table
+					$.getJSON(query, function(result){
+						console.log(result);
+						$("#results").html("");                    
+						if (! jQuery.isEmptyObject(result)){
+							$("#results").append("<thead><tr><th>Name</th><th>Address</th><th>Rating</th></tr></thead>");
+							$.each(result, function(key, val){
+								$("#results").append("<tr><td>" + val.name + "</td><td>" + val.full_address + "</td><td>" + val.stars + "</td><td>");
+							});
+						}
+						else{
+							$("#results").append("<center><h3>No results found</h2></center>");
+						}
+					});
+				});
+			});
+		</script>	
 	</head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top">
@@ -60,8 +88,8 @@
 					<div class="col-md-12 col-sm-12">
 					<form role="form" class="form-dropdown">
 						<div class="form-group">
-							<select class="form-control border-radius border-right" style="font-family: 'FontAwesome', Helvetica; color:#FFD700;">
-								<option value="" selected>Rating</option>
+							<select id="rating" class="form-control border-radius border-right" style="font-family: 'FontAwesome', Helvetica; color:#FFD700;">
+								<option value="0" selected>Rating</option>
 								<option value="5">&#xf005&#xf005&#xf005&#xf005&#xf005 </option>
 								<option value="4">&#xf005&#xf005&#xf005&#xf005 +</option>
 								<option value="3">&#xf005&#xf005&#xf005 +</option>
@@ -75,7 +103,7 @@
 					
 					<div class="col-md-6 col-sm-6">
 						<div class="input-group">
-							<input type="text" class="form-control border-radius border-right" placeholder="Find Ex. Restuarants"/>
+							<input id="keyword" type="text" class="form-control border-radius border-right" placeholder="Find Ex. Restuarants"/>
 							<span class="input-group-addon border-radius custom-addon">
 								<i class=""></i>
 							</span>
@@ -84,7 +112,7 @@
 					<br>
 					<div class="col-md-6 col-sm-6">
 						<div class="input-group">
-							<input type="text" class="form-control border-radius border-right" placeholder="Location Ex. New York "/>
+							<input id="city" type="text" class="form-control border-radius border-right" placeholder="Location Ex. New York "/>
 							<span class="input-group-addon border-radius custom-addon">
 							<i class=""></i>
 							</span>
@@ -92,7 +120,7 @@
 					</div>
 					<br><br>
 					<div class="col-md-12 col-sm-12 searchButton">
-						<div class="btn btn-default border-radius custom-button">
+						<div class="btn btn-default border-radius custom-button" id="search">
 							Search
 						</div>
 					</div>					
@@ -103,23 +131,7 @@
 </div> <!-- /#header -->
 	<section class="offer section-wrapper">
 		<div class="container">
-			 <table class="table table-striped table-hover">
-				<thead>
-				<tr>
-					<th></th>
-				</tr>
-				</thead>
-				<tbody>
-				<tr>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-				</tr>
-				</tbody>
+			 <table id="results" class="table table-striped table-hover">
 			</table>
 		</div> <!-- /.container -->
 	</section> <!-- /.offer -->
