login form (front-end)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="assets/css/owl.theme.css">
 		<link rel="stylesheet" href="assets/css/flexslider.css" type="text/css">
 		<link rel="stylesheet" href="assets/css/main.css">
+		<link rel="stylesheet" href="assets/css/login.css">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">	
 	</head>
 <body>
@@ -33,7 +34,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="contact.html">contact</a></li>
-						<li><a href="contact.html">Log In</a></li>
+						<li><a href="#login">Log In</a></li>
 						<li><a href="contact.html">Sign Up</a></li>
 					</ul>
 				<strong>	 <!-- /.nav -->
@@ -304,6 +305,13 @@
 			<li><a href="#"><i class="ion-social-facebook"></i></a></li>
 		</ul>
 	</div> <!-- /.subscribe -->
+	<div id="login">		
+			<form>
+				<input type="login" value="" placeholder="type username here" />
+				<input type="password" value="" placeholder="type your password" />				
+			    <button type="submit" class="btn btn-default border-radius custom-button buttonsLogIn">Log In</button>				
+			</form>	
+	</div>
 	<footer>
 		<div class="container">
 			<div class="row">
@@ -329,5 +337,6 @@
 	<script src="assets/js/jquery.flexslider.js"></script>
 	<script src="assets/js/script.js"></script>
 	<script src="assets/js/booglemaps.js"></script>
+	<script src="assets/js/login.js"></script>
 </body>
 </html>
