--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<div class="col-md-12 col-sm-12">
 					<form role="form" class="form-dropdown">
 						<div class="form-group">
-							<select class="form-control border-radius border-right" style="font-family: 'FontAwesome', Helvetica; color:#FFD700;">
+							<select class="form-control border-radius" style="font-family: 'FontAwesome', Helvetica; color:#FFD700;">
 								<option value="" selected>Rating</option>
 								<option value="5">&#xf005&#xf005&#xf005&#xf005&#xf005 </option>
 								<option value="4">&#xf005&#xf005&#xf005&#xf005 +</option>
@@ -100,12 +100,20 @@
 		</div>
 	</div>
 </div> <!-- /#header -->
+
 	<section class="section-wrapper" style="margin-top: 1%;">
-		<div class="container">
-			 <table class="table table-striped table-hover">
+		<div class="container myTable" style="margin-top: 5%;">
+			<div class="form-group">
+				<input type="text" class="search form-control border-radius " placeholder="Search in results">
+			</div>
+			<span class="counter"></span>
+			 <table class="table  table-hover results">
 				<thead style="color:#33CC99">
 				<tr>
 					<th><h1>FOOD</h1></th>
+				</tr>
+				<tr class="warning no-result">
+					<td ><i class="fa fa-warning"></i> No result</td>
 				</tr>
 				</thead>
 				<tbody>
@@ -338,5 +346,6 @@
 	<script src="assets/js/script.js"></script>
 	<script src="assets/js/booglemaps.js"></script>
 	<script src="assets/js/login.js"></script>
+	<script src="assets/js/searchtable.js"></script>
 </body>
 </html>
