added Twitter link to search results

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								$("#results > tbody").append('<div class="pull-right" style="font-size: 18px; color:#33CC99">\
 														<i class="fa fa-street-view" aria-hidden="true"></i>\
 														<i class="fa fa-file-image-o" aria-hidden="true"></i>\
-														<i class="fa fa-twitter" aria-hidden="true"></i></div></td></tr>');
+														<a href="https://twitter.com/search?q=' + val.name + '" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></div></td></tr>');
 							});
 						}
 						else{
