--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 					<tr>
 						<td>
 							<h3 class="" style="color: #222">Clementine’s Naughty & Nice Creamery</h3>
-							<small><a data-toggle="modal" data-target="#myModal">239 Reviews</a></small>
+							<small><a>239 Reviews</a></small>
 							<div class="starsRaiting " style="font-family: 'FontAwesome', Helvetica; color:#FFD700;">								
 								<i class="fa fa-star" aria-hidden="true"></i>
 								<i class="fa fa-star" aria-hidden="true"></i>
@@ -228,6 +228,32 @@
 				</tbody>
 			</table>
 		</div> <!-- /.container -->
+		<div class="pull-right">
+			<table class="table table-striped">
+				<thead>
+				<tr>
+					<th>Reviews for <p>Clementine’s Naughty & Nice Creamery</p></th>
+				</tr>
+				</thead>
+				<tbody>
+				<tr>
+					<td>John</td>
+					<td>Doe</td>
+					<td>john@example.com</td>
+				</tr>
+				<tr>
+					<td>Mary</td>
+					<td>Moe</td>
+					<td>mary@example.com</td>
+				</tr>
+				<tr>
+					<td>July</td>
+					<td>Dooley</td>
+					<td>july@example.com</td>
+				</tr>
+				</tbody>
+			</table>	
+		<div>
 	</section> <!-- /.offer -->
 	<!-- Top place to visit -->	
 	<section class="additional-services section-wrapper">
@@ -362,25 +388,7 @@
 			    <button type="submit" class="btn btn-default border-radius custom-button buttonsLogIn">Log In</button>				
 			</form>	
 	</div>
-	<div id="myModal" class="modal fade" role="dialog">
-	<div class="modal-dialog">
-
-		<!-- Modal content-->
-		<div class="modal-content">
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal">&times;</button>
-			<h4 class="modal-title">Modal Header</h4>
-		</div>
-		<div class="modal-body">
-			<p>Some text in the modal.</p>
-		</div>
-		<div class="modal-footer">
-			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		</div>
-		</div>
-
-	</div>
-	</div>
+	
 	<footer>
 		<div class="container">
 			<div class="row">
