table for reviews

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 		</div>
 	</div>
 </div> <!-- /#header -->
-	<section class="section-wrapper" style="margin-top: 1%;">
-		<div class="container myTable" style="margin-top: 5%;">
+	<section class="section-wrapper row" style="margin-top: 1%;">
+		<div class="col-sm-6 col-sm-offset-3 myTable" style="margin-top: 5%;">
 			<div class="form-group">
 				<input type="text" class="search form-control border-radius " placeholder="Search in results">
 			</div>
@@ -157,7 +157,7 @@
 				</thead>
 				<tbody>
 					<tr class="warning no-result">
-						<td ><i class="fa fa-warning"></i> No result</td>
+						<td style="color:#33CC99"><i class="fa fa-warning" ></i> No result</td>
 					</tr>
 					<tr>
 						<td>
@@ -228,11 +228,13 @@
 				</tbody>
 			</table>
 		</div> <!-- /.container -->
-		<div class="pull-right">
+		<div class="col-sm-3">
+			<br><br><br><br>
 			<table class="table table-striped">
 				<thead>
 				<tr>
-					<th>Reviews for <p>Clementine’s Naughty & Nice Creamery</p></th>
+					<th><p>Reviews for Clementine’s Naughty & Nice Creamery</p>
+					</th>
 				</tr>
 				</thead>
 				<tbody>
@@ -253,7 +255,7 @@
 				</tr>
 				</tbody>
 			</table>	
-		<div>
+		</div>
 	</section> <!-- /.offer -->
 	<!-- Top place to visit -->	
 	<section class="additional-services section-wrapper">
