--- a/index.html
+++ b/index.html
@@ -34,7 +34,16 @@
 						if (! jQuery.isEmptyObject(businesses)){
 							$(".no-result").hide();
 							$("#result-header").html(keyword);
+							var locations = [];
 							$.each(businesses, function(key, business){
+								var lat = business.latitude;
+								var lng = business.longitude;
+								locations.push({
+									name:business.name,
+									latlng: new google.maps.LatLng(lat,lng),
+									address:business.full_address,
+									stars:business.stars
+								});
 								var stars = "";
 								for (i = 0; i < business.stars; i++){
 									stars += '<i class="fa fa-star" aria-hidden="true"></i>';
@@ -50,6 +59,7 @@
 														<i class="fa fa-file-image-o" aria-hidden="true"></i>\
 														<a href="https://twitter.com/search?q=' + business.name + '" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></div></td></tr>');
 							});
+							initMap(locations,city);
 							$(".reviewR").click(function(){
 								var business_id = $(this).attr("data-business-id");
 								var review_query = 'reviews.php?id=' + business_id;
@@ -126,7 +136,7 @@
 
 <!-- Home -->
 <div id="header">
-	<script src="https://maps.google.com/maps/api/js" type="text/javascript"></script>       	 
+	<script src="https://maps.google.com/maps/api/js?key=AIzaSyA3CRHGthoGUPhwLk9bMjpeojPSCv-7XuA" type="text/javascript"></script>       	 
         <div id="map_canvas"> </div>
 		<div id="info"> </div>
 	<div class="intro col-sm-4 col-sm-offset-8" id="searchForm">
